tests/baselines/reference/parserES3Accessors3.errors.txt
tests/cases/conformance/parser/ecmascript3/Accessors/parserES3Accessors3.ts(1,15): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/parser/ecmascript3/Accessors/parserES3Accessors3.ts(1,15): error TS2378: A 'get' accessor must return a value.


==== tests/cases/conformance/parser/ecmascript3/Accessors/parserES3Accessors3.ts (2 errors) ====
    var v = { get Foo() { } };
                  ~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
                  ~~~
!!! error TS2378: A 'get' accessor must return a value.